--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<h1>Eccentric Oddities</h1>
+					<p>Experiments and observations from the commons</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
@@ -29,10 +29,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>Welcome to EO</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
+				<p>It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
@@ -276,7 +275,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://ineedchemicalx.deviantart.com/">Felicia Simion</a></li>
+					<li>&copy; Untitled. All rights reserved.</li><li>Mad Scientist: atyns</li><li>2015</li>
 				</ul>
 			</div>
 		</section>
