--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li><li>Mad Scientist: atyns</li><li>2015</li>
+					<li>&copy; EO. All rights reserved.</li><li>Mad Scientist: atyns</li><li>2015</li>
 				</ul>
 			</div>
 		</section>
